--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 
     <section>
         <h1>3 Random Audios</h1>
-        <audio controls src="URL1"></audio>
-        <audio controls src="URL2"></audio>
-        <audio controls src="URL3"></audio>
+        <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+        <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+        <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
     </section>
 </body>
 </html>
